updated .env file

--- a/network/.env
+++ b/network/.env
@@ -1,8 +1,7 @@
 NETWORK_NAME=skcript
 
-ORG1_HOSTNAME=hexabase
-ORG2_HOSTNAME=hexabase
-ORG2_HOSTNAME=hexabase
+ORG1_HOSTNAME=node03
+ORG2_HOSTNAME=node02
 
 
 ZK_COMPOSE_PATH=$PWD/kafka-zookeeper/docker-compose-zookeeper.yml
